/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package util;
option java_package = "com.sandpolis.core.proto.util";

/**
 * A password mechanism container.
 */
message PasswordContainer {

	// The mechanism ID
	int64 id = 1;
	
	// The associated password
	string password = 2;
}

/**
 * A key mechanism container.
 */
message KeyContainer {

	/**
 	 * A completely generic KeyPair container.
 	 */
	message KeyPair {

		// The private key
		bytes signer = 1;

		// The public key
		bytes verifier = 2;
	}
	
	// The mechanism ID
	int64 id = 1;
	
	// The server's reciprocal keypair
	KeyPair server = 2;
	
	// The client's reciprocal keypair
	KeyPair client = 3;
}
